Enhance Redis-Operator Helm chart with managed scheduling, topology spreading, and fallback logic
- Introduced `managed.*` fields for optional RedisReplication configurations, prioritizing them over top-level settings.
- Added support for `nodeSelector`, `affinity`, `tolerations`, `topologySpreadConstraints`, and customized `workloadResources` for Redis pods.
- Updated default Redis image to `v8.4.0` in templates.
- Improved persistence configuration with fallback support.
- Updated README and values.yaml with examples and guidance for high-availability setups.
- Enhanced CNPG chart with scheduling options for consistency.

--- a/charts/sure/templates/cnpg-cluster.yaml
+++ b/charts/sure/templates/cnpg-cluster.yaml
@@ -7,11 +7,33 @@ metadata:
     {{- include "sure.labels" . | nindent 4 }}
 spec:
   instances: {{ .Values.cnpg.cluster.instances | default 1 }}
+  {{- if .Values.cnpg.cluster.minSyncReplicas }}
+  minSyncReplicas: {{ .Values.cnpg.cluster.minSyncReplicas }}
+  {{- end }}
+  {{- if .Values.cnpg.cluster.maxSyncReplicas }}
+  maxSyncReplicas: {{ .Values.cnpg.cluster.maxSyncReplicas }}
+  {{- end }}
   storage:
     size: {{ .Values.cnpg.cluster.storage.size | default "10Gi" }}
     {{- if .Values.cnpg.cluster.storage.storageClassName }}
     storageClass: {{ .Values.cnpg.cluster.storage.storageClassName }}
     {{- end }}
+  {{- with .Values.cnpg.cluster.nodeSelector }}
+  nodeSelector:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.cnpg.cluster.affinity }}
+  affinity:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.cnpg.cluster.tolerations }}
+  tolerations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.cnpg.cluster.topologySpreadConstraints }}
+  topologySpreadConstraints:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   bootstrap:
     initdb:
       database: {{ .Values.cnpg.cluster.appDatabase | default "sure" }}
