--- a/charts/sure/templates/00-redis-operator-replication.yaml
+++ b/charts/sure/templates/00-redis-operator-replication.yaml
@@ -1,7 +1,16 @@
 {{- if and .Values.redisOperator.enabled .Values.redisOperator.managed.enabled }}
 {{- $name := .Values.redisOperator.name | default (printf "%s-redis" (include "sure.fullname" .)) -}}
-{{- $imgRepo := .Values.redisOperator.image.repository | default "quay.io/opstree/redis" -}}
-{{- $imgTag := .Values.redisOperator.image.tag | default "v7.2.4" -}}
+
+{{/* Prefer managed.* if provided; fallback to top-level */}}
+{{- $imgRepo := (coalesce .Values.redisOperator.managed.image.repository .Values.redisOperator.image.repository) | default "quay.io/opstree/redis" -}}
+{{- $imgTag  := (coalesce .Values.redisOperator.managed.image.tag        .Values.redisOperator.image.tag)        | default "v8.4.0" -}}
+{{- $replicas := (coalesce .Values.redisOperator.managed.replicas .Values.redisOperator.replicas) | default 3 -}}
+{{- $nodeSelector := (coalesce .Values.redisOperator.managed.nodeSelector .Values.redisOperator.nodeSelector) -}}
+{{- $tolerations := (coalesce .Values.redisOperator.managed.tolerations  .Values.redisOperator.tolerations)  -}}
+{{- $affinity    := (coalesce .Values.redisOperator.managed.affinity     .Values.redisOperator.affinity)     -}}
+{{- $tsc         := (coalesce .Values.redisOperator.managed.topologySpreadConstraints .Values.redisOperator.topologySpreadConstraints) -}}
+{{- $workloadResources := (coalesce .Values.redisOperator.managed.workloadResources .Values.redisOperator.workloadResources) -}}
+{{- $persistence := (coalesce .Values.redisOperator.managed.persistence .Values.redisOperator.persistence) -}}
 apiVersion: redis.redis.opstreelabs.in/v1beta2
 kind: RedisReplication
 metadata:
@@ -10,26 +19,42 @@ metadata:
     app.kubernetes.io/component: redis
     {{- include "sure.labels" . | nindent 4 }}
 spec:
-  clusterSize: {{ .Values.redisOperator.replicas | default 3 }}
+  clusterSize: {{ $replicas }}
   kubernetesConfig:
     image: {{ printf "%s:%s" $imgRepo $imgTag | quote }}
     redisSecret:
       name: {{ include "sure.redisSecretName" . }}
       key: {{ include "sure.redisPasswordKey" . }}
-    {{- with .Values.redisOperator.workloadResources }}
+    {{- with $workloadResources }}
     resources:
       {{- toYaml . | nindent 6 }}
     {{- end }}
-  {{- if .Values.redisOperator.persistence.enabled }}
+    {{- with $nodeSelector }}
+    nodeSelector:
+      {{- toYaml . | nindent 6 }}
+    {{- end }}
+    {{- with $tolerations }}
+    tolerations:
+      {{- toYaml . | nindent 6 }}
+    {{- end }}
+    {{- with $affinity }}
+    affinity:
+      {{- toYaml . | nindent 6 }}
+    {{- end }}
+    {{- with $tsc }}
+    topologySpreadConstraints:
+      {{- toYaml . | nindent 6 }}
+    {{- end }}
+  {{- if and $persistence $persistence.enabled }}
   storage:
     volumeClaimTemplate:
       spec:
         accessModes: [ "ReadWriteOnce" ]
         resources:
           requests:
-            storage: {{ .Values.redisOperator.persistence.size | default "8Gi" }}
-        {{- if .Values.redisOperator.persistence.className }}
-        storageClassName: {{ .Values.redisOperator.persistence.className }}
+            storage: {{ $persistence.size | default "8Gi" }}
+        {{- if $persistence.className }}
+        storageClassName: {{ $persistence.className }}
         {{- end }}
   {{- end }}
 {{- end }}
