--- a/.env.local.example
+++ b/.env.local.example
@@ -3,10 +3,10 @@ SELF_HOSTED = true
 
 # SimpleFIN runtime flags (default-off)
 # Accepted truthy values: 1, true, yes, on
-# SIMPLEFIN_INCLUDE_PENDING: when truthy, forces `pending=1` on SimpleFIN fetches when caller doesn't specify `pending:`
-SIMPLEFIN_INCLUDE_PENDING = false
 # SIMPLEFIN_DEBUG_RAW: when truthy, logs the raw payload returned by SimpleFIN (debug-only; can be noisy)
-SIMPLEFIN_DEBUG_RAW = false
+SIMPLEFIN_DEBUG_RAW=false
+# SIMPLEFIN_INCLUDE_PENDING: when truthy, forces `pending=1` on SimpleFIN fetches when caller doesn't specify `pending:`
+SIMPLEFIN_INCLUDE_PENDING=false
 
 # Controls onboarding flow (valid: open, closed, invite_only)
 ONBOARDING_STATE = open
