Add support for hosted pg databases

--- a/.env.example
+++ b/.env.example
@@ -64,10 +64,31 @@ SMTP_TLS_ENABLED=true
 EMAIL_SENDER=
 
 # Database Configuration
+# DEFAULT: Uses the local PostgreSQL container from docker-compose
 DB_HOST=localhost # May need to be changed to `DB_HOST=db` if using devcontainer
 DB_PORT=5432
 POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
+
+# ======================================================================================================
+# External PostgreSQL Configuration (Supabase, AWS RDS, Neon, etc.)
+# ======================================================================================================
+#
+# IMPORTANT: External DB requires building locally - change `image: ghcr.io/...` to `build: .`
+# in your compose.yml for both web and worker services.
+#
+# For Supabase free tier, use Session Pooler (not Direct Connection) to get IPv4 support:
+#
+# DB_HOST=aws-1-ap-south-1.pooler.supabase.com   # Session Pooler host
+# DB_PORT=5432
+# POSTGRES_USER=postgres.your-project-ref        # Includes project reference!
+# POSTGRES_PASSWORD=your_supabase_db_password
+# POSTGRES_DB=postgres
+# DB_SSLMODE=require
+# DB_CONNECT_TIMEOUT=5                           # Connection timeout in seconds
+# DB_PREPARED_STATEMENTS=false                   # Required for connection pooler
+#
+# Then run: docker compose up
 
 # Redis configuration
 REDIS_URL=redis://localhost:6379/1
