--- a/.env.example
+++ b/.env.example
@@ -88,7 +88,7 @@ POSTGRES_USER=postgres
 # DB_CONNECT_TIMEOUT=5                           # Connection timeout in seconds
 # DB_PREPARED_STATEMENTS=false                   # Required for connection pooler
 #
-# Then run: docker compose up
+# Then run: docker compose --profile external-db up
 
 # Redis configuration
 REDIS_URL=redis://localhost:6379/1
