--- a/.env.example
+++ b/.env.example
@@ -134,3 +134,22 @@ POSTHOG_HOST=
 # GENERIC_S3_BUCKET=
 # GENERIC_S3_ENDPOINT=
 # GENERIC_S3_FORCE_PATH_STYLE= <- defaults to false
+
+# ======================================================================================================
+# Database Mirror Configuration - mirror writes to external PostgreSQL (e.g., Supabase)
+# ======================================================================================================
+#
+# Enable this feature to replicate all database writes to an external PostgreSQL database.
+# This is useful for data durability and backup purposes in self-hosted deployments.
+#
+# The mirror database schema is automatically initialized if the database is empty.
+# If the database already contains data, it will only append/update records.
+#
+DATABASE_MIRROR_ENABLED=true
+MIRROR_DB_HOST=
+MIRROR_DB_PORT=
+MIRROR_DB_NAME=
+MIRROR_DB_USER=
+MIRROR_DB_PASSWORD=
+MIRROR_DB_POOL=
+MIRROR_DB_SSLMODE=  # Options: disable, prefer, require, verify-ca, verify-full
