--- a/compose.example.yml
+++ b/compose.example.yml
@@ -41,8 +41,16 @@ x-rails-env: &rails_env
   DB_HOST: db
   DB_PORT: 5432
   REDIS_URL: redis://redis:6379/1
-# NOTE: enabling OpenAI will incur costs when you use AI-related features in the app (chat, rules).  Make sure you have set appropriate spend limits on your account before adding this.
+  # NOTE: enabling OpenAI will incur costs when you use AI-related features in the app (chat, rules).  Make sure you have set appropriate spend limits on your account before adding this.
   OPENAI_ACCESS_TOKEN: ${OPENAI_ACCESS_TOKEN}
+  # Database Mirror Configuration (Optional) - replicate writes to external PostgreSQL like Supabase
+  DATABASE_MIRROR_ENABLED: ${DATABASE_MIRROR_ENABLED:-false}
+  MIRROR_DB_HOST: ${MIRROR_DB_HOST:-}
+  MIRROR_DB_PORT: ${MIRROR_DB_PORT:-5432}
+  MIRROR_DB_NAME: ${MIRROR_DB_NAME:-}
+  MIRROR_DB_USER: ${MIRROR_DB_USER:-}
+  MIRROR_DB_PASSWORD: ${MIRROR_DB_PASSWORD:-}
+  MIRROR_DB_SSLMODE: ${MIRROR_DB_SSLMODE:-require}
 
 services:
   web:
@@ -110,6 +118,7 @@ volumes:
   app-storage:
   postgres-data:
   redis-data:
+
 
 networks:
   sure_net:
