Added ETH and SOL as currency support

--- a/config/currencies.yml
+++ b/config/currencies.yml
@@ -880,6 +880,34 @@ btc:
   delimiter: ","
   default_format: "%u%n"
   default_precision: 8
+eth:
+  name: Ethereum
+  priority: 100
+  iso_code: ETH
+  iso_numeric: ""
+  html_code: "&#x039E;"
+  symbol: "Ξ"
+  minor_unit: Wei
+  minor_unit_conversion: 1000000000000000000
+  smallest_denomination: 1
+  separator: "."
+  delimiter: ","
+  default_format: "%u%n"
+  default_precision: 18
+sol:
+  name: Solana
+  priority: 100
+  iso_code: SOL
+  iso_numeric: ""
+  html_code: "&#x25ce;"
+  symbol: "◎"
+  minor_unit: Lamport
+  minor_unit_conversion: 1000000000
+  smallest_denomination: 1
+  separator: "."
+  delimiter: ","
+  default_format: "%u%n"
+  default_precision: 9
 jep:
   name: Jersey Pound
   priority: 100
