Add plugin rendering logic and tests for CNPG Cluster CR
- Implemented logic in `cnpg-cluster.yaml` to render `.spec.plugins` based on `cnpg.cluster.plugins` values.
- Added Helm unit tests to validate plugin rendering scenarios: unset plugins and configured plugin values.
- Updated `values.yaml` with examples and documentation for configuring CNPG plugins.

--- a/charts/sure/templates/cnpg-cluster.yaml
+++ b/charts/sure/templates/cnpg-cluster.yaml
@@ -58,6 +58,10 @@ spec:
   backup:
     {{- toYaml $backup | nindent 4 }}
   {{- end }}
+  {{ with .Values.cnpg.cluster.plugins }}
+  plugins:
+    {{- toYaml . | nindent 4 }}
+  {{ end }}
   {{- with .Values.cnpg.cluster.nodeSelector }}
   nodeSelector:
     {{- toYaml . | nindent 4 }}
