Update chart to v1.0.1 with CNPG backup and plugin enhancements
- Add rendering logic for `Cluster.spec.backup`, inferring `method: volumeSnapshot` when applicable and validating required fields.
- Add support for `Cluster.spec.plugins`, enabling barman-cloud plugin and WAL archiver configuration.
- Strip unsupported keys (e.g., `backup.ttl`, `volumeSnapshot.enabled`) to prevent CRD warnings.
- Update examples and documentation in `README.md` and `values.yaml`.

--- a/charts/sure/values.yaml
+++ b/charts/sure/values.yaml
@@ -100,6 +100,17 @@ cnpg:
     #     isWALArchiver: true
     #     parameters:
     #       barmanObjectName: minio-backups
+    #
+    # Example (complete setup: WAL archiving via barman-cloud plugin + snapshot backups):
+    # plugins:
+    #   - name: barman-cloud.cloudnative-pg.io
+    #     isWALArchiver: true
+    #     parameters:
+    #       barmanObjectName: minio-backups  # references an ObjectStore CR
+    # backup:
+    #   method: volumeSnapshot
+    #   volumeSnapshot:
+    #     className: longhorn
     plugins: []
     # auth config for application user
     appUser: sure
