--- a/compose.example.ai.yml
+++ b/compose.example.ai.yml
@@ -1,12 +1,12 @@
 # ===========================================================================
-# Example Docker Compose file
+# Example Docker Compose file with additional Ollama service for LLM tools
 # ===========================================================================
 #
 # Purpose:
 # --------
 #
 # This file is an example Docker Compose configuration for self hosting
-# Sure on your local machine with a local LLM or on a cloud VPS.
+# Sure with Ollama on your local machine or on a cloud VPS.
 #
 # The configuration below is a "standard" setup that works out of the box,
 # but if you're running this outside of a local network, it is recommended
@@ -42,9 +42,12 @@ x-rails-env: &rails_env
   DB_PORT: 5432
   REDIS_URL: redis://redis:6379/1
   AI_DEBUG_MODE: "true" # Useful for debugging, set to "false" in production
-  OPENAI_ACCESS_TOKEN: ollama
+# Ollama using OpenAI API compatible endpoints
+  OPENAI_ACCESS_TOKEN: token-can-be-any-value-for-ollama
   OPENAI_MODEL: llama3.1:8b   # Note: Use tool-enabled model
   OPENAI_URI_BASE: http://ollama:11434/v1
+# NOTE: enabling OpenAI will incur costs when you use AI-related features in the app (chat, rules).  Make sure you have set appropriate spend limits on your account before adding this.
+#  OPENAI_ACCESS_TOKEN: ${OPENAI_ACCESS_TOKEN}
 
 services:
   # Note: You still have to download models manually using the ollama CLI or via Open WebUI
