--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -67,16 +67,21 @@ jobs:
           path: gh-pages
 
       - name: Update index and push
+        env:
+          GIT_USER_NAME: ${{ github.actor }}
+          GIT_USER_EMAIL: ${{ github.actor }}@users.noreply.github.com
         run: |
           # Copy packaged chart
           cp .cr-release-packages/*.tgz gh-pages/
-          
+
           # Update index
           helm repo index gh-pages --url https://we-promise.github.io/sure --merge gh-pages/index.yaml
 
           # Push to gh-pages
           git config --global credential.helper cache
           cd gh-pages
+          git config user.name "$GIT_USER_NAME"
+          git config user.email "$GIT_USER_EMAIL"
           git add .
           git commit -m "Release nightly: ${{ steps.version.outputs.version }}"
           git push
