--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -10,7 +10,11 @@ def hasKeystore = false
 if (keystorePropertiesFile.exists()) {
     try {
         keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-        hasKeystore = keystoreProperties['storeFile'] != null
+        hasKeystore = keystoreProperties['storeFile'] != null &&
+                     keystoreProperties['keyAlias'] != null &&
+                     keystoreProperties['keyPassword'] != null &&
+                     keystoreProperties['storePassword'] != null &&
+                     file(keystoreProperties['storeFile']).exists()
     } catch (Exception e) {
         println("Warning: Failed to load key.properties: ${e.message}")
     }
@@ -30,8 +34,8 @@ android {
         jvmTarget = '1.8'
     }
 
-    signingConfigs {
-        if (hasKeystore) {
+    if (hasKeystore) {
+        signingConfigs {
             release {
                 keyAlias keystoreProperties['keyAlias']
                 keyPassword keystoreProperties['keyPassword']
