--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -340,26 +340,38 @@ jobs:
 
       - name: Bump alpha version
         run: |
-          VERSION_FILE="config/initializers/version.rb"
+           VERSION_FILE="config/initializers/version.rb"
 
-          # Extract current version
-          CURRENT_VERSION=$(grep -oP '"\K[0-9]+\.[0-9]+\.[0-9]+-alpha\.[0-9]+' "$VERSION_FILE")
-          echo "Current version: $CURRENT_VERSION"
-
-          # Extract the alpha number and increment it
-          ALPHA_NUM=$(echo "$CURRENT_VERSION" | grep -oP 'alpha\.\K[0-9]+')
-          NEW_ALPHA_NUM=$((ALPHA_NUM + 1))
-
-          # Create new version string
-          BASE_VERSION=$(echo "$CURRENT_VERSION" | grep -oP '^[0-9]+\.[0-9]+\.[0-9]+')
-          NEW_VERSION="${BASE_VERSION}-alpha.${NEW_ALPHA_NUM}"
-          echo "New version: $NEW_VERSION"
-
-          # Update the version file
-          sed -i "s/\"$CURRENT_VERSION\"/\"$NEW_VERSION\"/" "$VERSION_FILE"
-
-          # Verify the change
-          grep "semver" "$VERSION_FILE"
+           # Ensure version file exists
+           if [ ! -f "$VERSION_FILE" ]; then
+             echo "ERROR: Version file not found: $VERSION_FILE"
+             exit 1
+           fi
+ 
+           # Extract current version
+           CURRENT_VERSION=$(grep -oP '"\K[0-9]+\.[0-9]+\.[0-9]+-alpha\.[0-9]+' "$VERSION_FILE")
+           if [ -z "$CURRENT_VERSION" ]; then
+             echo "ERROR: Could not extract version from $VERSION_FILE"
+             exit 1
+           fi
+           echo "Current version: $CURRENT_VERSION"
+ 
+           # Extract the alpha number and increment it
+           ALPHA_NUM=$(echo "$CURRENT_VERSION" | grep -oP 'alpha\.\K[0-9]+')
+           if [ -z "$ALPHA_NUM" ]; then
+             echo "ERROR: Could not extract alpha number from $CURRENT_VERSION"
+             exit 1
+           fi
+           NEW_ALPHA_NUM=$((ALPHA_NUM + 1))
+ 
+           # Create new version string
+           BASE_VERSION=$(echo "$CURRENT_VERSION" | grep -oP '^[0-9]+\.[0-9]+\.[0-9]+')
+           if [ -z "$BASE_VERSION" ]; then
+             echo "ERROR: Could not extract base version from $CURRENT_VERSION"
+             exit 1
+           fi
+           NEW_VERSION="${BASE_VERSION}-alpha.${NEW_ALPHA_NUM}"
+           echo "New version: $NEW_VERSION"
 
       - name: Commit and push version bump
         run: |
@@ -380,4 +392,5 @@ jobs:
             delay=$((2 ** attempts))
             echo "Push failed (attempt $attempts). Retrying in ${delay} seconds..."
             sleep ${delay}
+            git pull --rebase origin main
           done
