Add backup profiles and update backup volume path in Docker Compose examples

--- a/compose.example.ai.yml
+++ b/compose.example.ai.yml
@@ -52,6 +52,8 @@ x-rails-env: &rails_env
 services:
   # Note: You still have to download models manually using the ollama CLI or via Open WebUI
   ollama:
+    profiles:
+      - ai
     volumes:
       - ollama:/root/.ollama
     container_name: ollama
@@ -75,6 +77,8 @@ services:
     #           capabilities: [ gpu ]
 
   ollama-webui:
+    profiles:
+      - ai
     image: ghcr.io/open-webui/open-webui
     container_name: ollama-webui
     volumes:
@@ -146,10 +150,12 @@ services:
       - sure_net
 
   backup:
+    profiles:
+      - backup
     image: prodrigestivill/postgres-backup-local
     restart: unless-stopped
     volumes:
-      - backup_data:/backups
+      - /opt/sure-data/backups:/backups # Change this path to your desired backup location on the host machine
     environment:
       - POSTGRES_HOST=db
       - POSTGRES_DB=${POSTGRES_DB:-sure_production}
@@ -180,7 +186,6 @@ services:
 volumes:
   app-storage:
   postgres-data:
-  backup_data:
   redis-data:
   ollama:
   ollama-webui:
