--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,8 @@
     "vscode": {
       "extensions": [
         "biomejs.biome",
+        "Dart-Code.dart-code",
+        "Dart-Code.flutter",
         "EditorConfig.EditorConfig",
         "Shopify.ruby-extensions-pack"
       ],
