--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - ./.bashrc:/root/.bashrc:ro,cached
       - ..:/workspace:cached
       - bundle_cache:/bundle
-      - pub_cache:/root/.pub-cache
+      - pub_cache:/home/dev/.pub-cache
     ports:
       - "3000:3000"
       - "8080:8080"
