refactor: allow toggling all AI features.

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ SECRET_KEY_BASE=secret-value
 # --------------------------------------------------------------------------------------------------------
 
 # Optional: OpenAI-compatible API endpoint config
+# Set OPENAI_ACCESS_TOKEN to "DISABLED" to completely hide AI features from the UI
 OPENAI_ACCESS_TOKEN=
 OPENAI_MODEL=
 OPENAI_URI_BASE=
