--- a/charts/sure/Chart.yaml
+++ b/charts/sure/Chart.yaml
@@ -24,7 +24,7 @@ maintainers:
 # Users must `helm repo add` the below repositories before installing this chart.
 dependencies:
   - name: cloudnative-pg
-    version: "0.22.0"
+    version: "~0.27"
     repository: "https://cloudnative-pg.github.io/charts"
     condition: cnpg.enabled
   - name: redis-operator
